# hexbot-pi

./: .gitmodules  CMakeLists.txt  README.md
animations/: backward.json  bindings.json  forward.json  left.json  right.json  sit.json  stay.json
src/: main.cpp
